--- a/Preliminary-Project-Report/group8-ppr.tex
+++ b/Preliminary-Project-Report/group8-ppr.tex
@@ -45,22 +45,24 @@
 \begin{document}
 
 %%%%%%%%% TITLE - PLEASE UPDATE
-\title{\LaTeX\ Author Guidelines for \confName~Proceedings}
+\title{Exploring Image Super-Resolution and its Applications on Medical Images}
 
-\author{First Author\\
-Institution1\\
-Institution1 address\\
-{\tt\small firstauthor@i1.org}
+\author{Aditya Somasundaram\\
+{\tt\small ee20btech11002}
 % For a paper whose authors are all at the same institution,
 % omit the following lines up until the closing ``}''.
 % Additional authors and addresses can be added with ``\and'',
 % just like the second author.
 % To save space, use either the email address or home page, not both
 \and
-Second Author\\
-Institution2\\
-First line of institution2 address\\
-{\tt\small secondauthor@i2.org}
+Sumanth N R\\
+{\tt\small ma20btech11016}
+\and
+Ruthwika Boyapally\\
+{\tt\small ma20btech11004}
+\and
+Gautham Bellamkonda\\
+{\tt\small cs20btech11017}
 }
 \maketitle
 
