Final changes to PPR

--- a/Preliminary-Project-Report/egbib.bib
+++ b/Preliminary-Project-Report/egbib.bib
@@ -56,13 +56,114 @@
 @String(CVPRW= {CVPRW})
 @String(CSVT = {IEEE TCSVT})
 
+@article{dong2015image,
+  title={Image super-resolution using deep convolutional networks},
+  author={Dong, Chao and Loy, Chen Change and He, Kaiming and Tang, Xiaoou},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={38},
+  number={2},
+  pages={295--307},
+  year={2015},
+  publisher={IEEE}
+}
+
+@inproceedings{kim2016accurate,
+  title={Accurate image super-resolution using very deep convolutional networks},
+  author={Kim, Jiwon and Lee, Jung Kwon and Lee, Kyoung Mu},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={1646--1654},
+  year={2016}
+}
+
+@inproceedings{lim2017enhanced,
+  title={Enhanced deep residual networks for single image super-resolution},
+  author={Lim, Bee and Son, Sanghyun and Kim, Heewon and Nah, Seungjun and Mu Lee, Kyoung},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition workshops},
+  pages={136--144},
+  year={2017}
+}
+
+@inproceedings{kim2016deeply,
+  title={Deeply-recursive convolutional network for image super-resolution},
+  author={Kim, Jiwon and Lee, Jung Kwon and Lee, Kyoung Mu},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={1637--1645},
+  year={2016}
+}
+
+@inproceedings{tai2017image,
+  title={Image super-resolution via deep recursive residual network},
+  author={Tai, Ying and Yang, Jian and Liu, Xiaoming},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={3147--3155},
+  year={2017}
+}
+
+@inproceedings{ledig2017photo,
+  title={Photo-realistic single image super-resolution using a generative adversarial network},
+  author={Ledig, Christian and Theis, Lucas and Husz{\'a}r, Ferenc and Caballero, Jose and Cunningham, Andrew and Acosta, Alejandro and Aitken, Andrew and Tejani, Alykhan and Totz, Johannes and Wang, Zehan and others},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={4681--4690},
+  year={2017}
+}
+
+@inproceedings{wang2018esrgan,
+  title={Esrgan: Enhanced super-resolution generative adversarial networks},
+  author={Wang, Xintao and Yu, Ke and Wu, Shixiang and Gu, Jinjin and Liu, Yihao and Dong, Chao and Qiao, Yu and Change Loy, Chen},
+  booktitle={Proceedings of the European conference on computer vision (ECCV) workshops},
+  pages={0--0},
+  year={2018}
+}
+
+@article{mahapatra2019image,
+  title={Image super-resolution using progressive generative adversarial networks for medical image analysis},
+  author={Mahapatra, Dwarikanath and Bozorgtabar, Behzad and Garnavi, Rahil},
+  journal={Computerized Medical Imaging and Graphics},
+  volume={71},
+  pages={30--39},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{mahapatra2017retinal,
+  title={Retinal vasculature segmentation using local saliency maps and generative adversarial networks for image super resolution},
+  author={Mahapatra, Dwarikanath and Bozorgtabar, Behzad},
+  journal={arXiv preprint arXiv:1710.04783},
+  year={2017}
+}
+
+@article{umehara2018application,
+  title={Application of super-resolution convolutional neural network for enhancing image resolution in chest CT},
+  author={Umehara, Kensuke and Ota, Junko and Ishida, Takayuki},
+  journal={Journal of digital imaging},
+  volume={31},
+  pages={441--450},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{park2018computed,
+  title={Computed tomography super-resolution using deep convolutional neural network},
+  author={Park, Junyoung and Hwang, Donghwi and Kim, Kyeong Yun and Kang, Seung Kwan and Kim, Yu Kyeong and Lee, Jae Sung},
+  journal={Physics in Medicine \& Biology},
+  volume={63},
+  number={14},
+  pages={145011},
+  year={2018},
+  publisher={IOP Publishing}
+}
 
 
-@misc{Authors14,
- author = {FirstName LastName},
- title = {The frobnicatable foo filter},
- note = {Face and Gesture submission ID 324. Supplied as supplemental material {\tt fg324.pdf}},
- year = 2014
+
+
+
+
+
+@misc{ahmad_nature,
+ author = {Waqar Ahmad, Hazrat Ali, Zubair Shah and Shoaib Azmat },
+ title = {A new generative adversarial network for medical images super resolution},
+ note = {Nature Article},
+ year = 2022
 }
 
 @misc{Authors14b,
