--- a/Code/generateSR.ipynb
+++ b/Code/generateSR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "\n",
+    "import os\n",
     "import torch\n",
     "import torchvision.transforms as transforms\n",
     "\n",
-    "from torchvision.datasets import CIFAR10\n",
-    "from tqdm import tqdm\n",
+    "from torchvision.datasets import CIFAR100, CIFAR10\n",
+    "from tqdm import tqdm_notebook as tqdm\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
+    "\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"2\"\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,21 +89,41 @@
     "trainset = CIFAR10(root='./data', train=True, download=True, transform=transforms.ToTensor())\n",
     "testset = CIFAR10(root='./data', train=False, download=True, transform=transforms.ToTensor())\n",
     "\n",
-    "classes = ('plane', 'car', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
+    "# classes = ('plane', 'car', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 98/98 [01:40<00:00,  1.02s/it]\n",
-      "100%|██████████| 20/20 [00:20<00:00,  1.03s/it]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "db8666eafde74c9eba8e8fe2c66988ab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/98 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "551a609deea740af8a48bfbd1039aba8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -111,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,27 +158,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sr_trainloader = DataLoader(sr_trainset, batch_size=512, shuffle=False, num_workers=4)\n",
-    "sr_testloader = DataLoader(sr_testset, batch_size=512, shuffle=False, num_workers=4)\n",
+    "sr_trainloader = DataLoader(sr_trainset, batch_size=64, shuffle=False, num_workers=4)\n",
+    "sr_testloader = DataLoader(sr_testset, batch_size=64, shuffle=False, num_workers=4)\n",
     "\n",
-    "bc_trainloader = DataLoader(bc_trainset, batch_size=512, shuffle=False, num_workers=4)\n",
-    "bc_testloader = DataLoader(bc_testset, batch_size=512, shuffle=False, num_workers=4)"
+    "bc_trainloader = DataLoader(bc_trainset, batch_size=64, shuffle=False, num_workers=4)\n",
+    "bc_testloader = DataLoader(bc_testset, batch_size=64, shuffle=False, num_workers=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([512, 3, 128, 128]) torch.Size([512])\n"
+      "torch.Size([64, 3, 128, 128]) torch.Size([64])\n"
      ]
     },
     {
@@ -180,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([512, 3, 128, 128]) torch.Size([512])\n"
+      "torch.Size([64, 3, 128, 128]) torch.Size([64])\n"
      ]
     },
     {
@@ -207,6 +229,130 @@
     "    plt.imshow(inputs[0].permute(1, 2, 0))\n",
     "    plt.show()\n",
     "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training a CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision.models as models\n",
+    "import torch.optim as optim\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_model(pretrain=True, out_channels=10):\n",
+    "    model = models.resnet18(pretrained=pretrain)\n",
+    "    model.fc = torch.nn.Linear(512, out_channels)\n",
+    "    model = model.cuda()\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "def train(model, trainloader, testloader, epochs=10):\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = optim.SGD(model.parameters(), lr=0.001, momentum=0.9)\n",
+    "    accuracy = []\n",
+    "    for epoch in tqdm(range(epochs)):\n",
+    "        running_loss = 0.0\n",
+    "        for i, (inputs, targets) in enumerate(trainloader):\n",
+    "            inputs = inputs.cuda()\n",
+    "            targets = targets.cuda()\n",
+    "            inputs = Variable(inputs).float()\n",
+    "            targets = Variable(targets).long()\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, targets)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            running_loss += loss.item()\n",
+    "\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        with torch.no_grad():\n",
+    "            for (inputs, targets) in testloader:\n",
+    "                inputs = inputs.cuda()\n",
+    "                targets = targets.cuda()\n",
+    "                inputs = Variable(inputs).float()\n",
+    "                targets = Variable(targets).long()\n",
+    "                outputs = model(inputs)\n",
+    "                _, predicted = torch.max(outputs.data, 1)\n",
+    "                total += targets.size(0)\n",
+    "                correct += (predicted == targets).sum().item()\n",
+    "\n",
+    "        print('Accuracy of the network on the 10000 test images: %d %%' % (100 * correct / total))\n",
+    "        print('Loss on train set: ', running_loss / len(trainloader))\n",
+    "        accuracy.append(correct / total)\n",
+    "    return accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ff516a65d0b4e7fae01c02f660f04ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/15 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model = create_model(True, 10)\n",
+    "train(model, bc_trainloader, bc_testloader, epochs=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = create_model(True, 10)\n",
+    "train(model, sr_trainloader, sr_testloader, epochs=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = create_model(False, 10)\n",
+    "train(model, bc_trainloader, bc_testloader, epochs=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = create_model(False, 10)\n",
+    "train(model, sr_trainloader, sr_testloader, epochs=100)"
    ]
   }
  ],
