Updates from Overleaf

--- a/Preliminary-Project-Report/egbib.bib
+++ b/Preliminary-Project-Report/egbib.bib
@@ -124,6 +124,11 @@
   year={2019},
   publisher={Elsevier}
 }
+@misc{vest2017very,
+  title={Very low resolution image classification},
+  author={Vest, Adam and Jamal, Muhammadabdullah and Gong, Boqing},
+  year={2017}
+}
 
 @article{mahapatra2017retinal,
   title={Retinal vasculature segmentation using local saliency maps and generative adversarial networks for image super resolution},
