--- a/Preliminary-Project-Report/group8-ppr.tex
+++ b/Preliminary-Project-Report/group8-ppr.tex
@@ -11,9 +11,42 @@
 
 % Include other packages here, before hyperref.
 \usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{amssymb}
 \usepackage{booktabs}
+\usepackage{wrapfig}
+\usepackage{lipsum}
+\usepackage{cite}
+\usepackage{amsmath,amssymb,amsfonts}
+% \usepackage{textcomp}
+% \usepackage{subfloat}
+% \usepackage{xcolor}
+% \usepackage{wasysym}
+% \usepackage{hyperref}
+% \usepackage{amsthm}
+% \usepackage{mathrsfs}
+% \usepackage{txfonts}
+% \usepackage{stfloats}
+% \usepackage{cite}
+% \usepackage{cases}
+% %\usepackage{subfig}
+% \usepackage{xtab}
+% \usepackage{longtable}
+% \usepackage{multirow}
+% \usepackage{algorithm}
+% \usepackage{algpseudocode}
+% \usepackage{enumerate}
+% \usepackage{enumitem}
+% \usepackage{mathtools}
+% \usepackage{multicol}
+% \usepackage{multirow}
+% \usepackage{diagbox}
+% \usepackage{amsthm}
+% \usepackage{float}
+% \usepackage{comment}
+% \usepackage{caption}
+% \usepackage{subcaption}
+% \usepackage[english]{babel}
+% \usepackage{url}
+% \usepackage{authblk}
 
 
 % It is strongly recommended to use hyperref, especially for the review version.
@@ -116,6 +149,101 @@ Dong et al. \cite{dong2015image} were pioneers in utilizing deep learning method
 Shifting toward medical image analysis, Mahaprata et al. \cite{mahapatra2019image} \cite{mahapatra2017retinal} applied progressive GANs to enhance the resolution of medical images, expanding the utility of GANs to healthcare contexts and also combined super-resolution with retinal vasculature segmentation using GANs, demonstrating the applicability of GANs in medical image enhancement. In the field of medical diagnostics, Umehara et al. \cite{umehara2018application} applied super-resolution convolutional neural networks to improve image resolution in chest CT scans. Furthermore, Park et al. \cite{park2018computed} explored the use of deep convolutional neural networks to enhance the resolution of computed tomography (CT) images, offering potential benefits for medical diagnostics. Recent advancements include a Nature Scientific Reports article by Ahmad et al. \cite{ahmad_nature} introducing a novel GAN architecture specifically designed for medical image super-resolution, representing cutting-edge developments in the field. 
 
 Collectively, these papers reflect the diverse approaches and methodologies employed in image super-resolution, from deep learning and recursive architectures to the application of GANs, with significant implications for various domains, including healthcare and diagnostics.
+
+\textbf{Very Low Resolution Image Classification}\cite{vest2017very} utilizes a super resolution net to improve the image resolution before passing it through a network. Comparision of Low Resolution (LR), High Resolution (HR) and Super Resolution (SR) show that the HR gives the best accuracy. closely followed by SRResNet SR Classifier which beats the bicubic interpolation considerably.
+
+We aim to do the same but on the datasets pertaining to medical images.
+
+\section{Our Methodology}
+After going through the computation and training of the SRResNet, we realize that the computational complexity to train such a network on new datasets would be beyond the resources available at this time. Hence, we use an off the shelf pre-trained SRResNet for experimenting using the CIFAR-10 dataset, as the existing SRResNet was trained on more or less natural images.
+
+The resolution of the images is increased using bicubic interpolation and the SRResNet. Convolutional Neural Networks are trained on the two generated datasets and the results are compared. Bicubic interpolation is an image resizing technique that estimates pixel values at non-integer coordinates based on neighboring pixels. It employs a smooth cubic function to perform weighted averaging of 16 nearby pixels, resulting in high-quality and visually smooth resized images.However, it's not a learned model like neural networks but rather a deterministic mathematical operation.
+
+\subsection{Architecture of the SRResNet}
+The SRResNet architecture is essentially a generator network designed for super-resolution tasks, and it leverages residual blocks to improve image quality and resolution.We employed 16 residual blocks to enhance the quality and resolution of the super-resolved images.This approach is different from traditional super-resolution methods that minimize pixel-wise errors like Mean Squared Error (MSE).
+
+\subsubsection{Residual Blocks:}
+This is a building block for the residual network.The block is designed to help the network capture residual information, which is the difference between the super-resolved image and the low-resolution input image. This allows for easier training and the generation of high-quality results.Each Residual Block consists of the following key elements:
+\begin{enumerate}
+    \item Convolutional Layers: There are two convolutional layers within each Residual Block. These layers have 64 output channels, utilize 3x3 kernels, and are responsible for convolving the input features to extract relevant information.
+    \item Instance Normalization: Instance normalization is applied to normalize the features within the Residual Block, aiding in faster convergence and improved training stability.
+    \item LeakyReLU Activation: A LeakyReLU activation function is employed with a slope of 0.2. LeakyReLU introduces non-linearity, allowing the network to learn complex mappings, and mitigating the vanishing gradient problem.
+\end{enumerate}
+
+\subsubsection{Generator Network (G):}
+\begin{enumerate}
+    \item Residual Blocks: The core of the Generator Network consists of 16 Residual Blocks, each comprising two 3x3 convolutional layers with 64 feature maps, batch normalization for enhanced training stability, and LeakyReLU activation functions for introducing non-linearity.
+
+    \item Convolutional Layers: The network commences with a convolutional layer that processes the input image, transforming it into a feature representation.
+
+    \item Middle Convolutional Layer: After the Residual Blocks, there is a middle convolutional layer, which is further enhanced by instance normalization.
+
+    \item Upscaling (upscale4x): The final step involves upscaling the output image by a factor of 4x. This is achieved through the application of two sub-pixel convolution layers (upscale4x), which significantly augment the image's spatial resolution.
+\end{enumerate}
+\begin{figure}
+    \centering
+    \begin{subfigure}{0.6\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{Preliminary-Project-Report/SRResNet.png}
+        \caption{Architecture of the SRResNet}
+    \end{subfigure}
+\end{figure}
+
+\subsection{Architecture of the CNN}
+The standard architecture of ResNet18 shown in \ref{fig:enter-label} is used.
+
+\subsubsection{Input Layer}
+The input to ResNet-18 is typically a 3-channel (RGB) image, and its dimensions depend on the specific task and dataset it is designed for.
+
+\subsubsection{Convolutional Layer}
+The network starts with a standard convolutional layer with 64 filters, a kernel size of 7x7, and a stride of 2, which reduces the spatial dimensions.
+
+\subsubsection{Batch Normalization and Activation}
+After each convolutional layer, batch normalization and a ReLU (Rectified Linear Unit) activation function are applied to introduce non-linearity and improve training stability.
+
+\subsubsection{Residual Blocks}
+ResNet-18 consists of four residual blocks, each containing multiple convolutional layers. Each block has the following structure:
+\begin{enumerate}
+    \item Convolution Layers: Typically, two 3x3 convolutional layers are used in each block.
+    \item Batch Normalization and ReLU activation are applied after each convolution.
+    \item Shortcut Connection: A "skip connection" or "identity shortcut" allows the input to bypass the convolutional layers in the block. This connection helps to mitigate the vanishing gradient problem and facilitates training of very deep networks.
+    \item Merge Operation: The output of the convolutional layers is added to the shortcut connection, creating a residual connection. This addition operation is element-wise.
+\end{enumerate}
+
+\subsubsection{Downsampling}
+After the first residual block, there is a downsampling operation, typically performed by a convolutional layer with a stride of 2. This reduces the spatial dimensions while increasing the number of filters.
+
+\subsubsection{Fully Connected Layer}
+The global average pooling operation is applied to the output of the last residual block to reduce the spatial dimensions to a 1x1 feature map. A fully connected layer with the desired number of output neurons is added on top of the global average pooling layer to make predictions for the specific task (e.g., classification).
+
+\subsubsection{Output Layer}
+The final layer is typically a softmax activation for classification tasks, providing class probabilities.
+
+\begin{figure}
+    \centering
+    \includegraphics{Preliminary-Project-Report/ResNet18 - 1.png}
+    \caption{Architecture of the CNN}
+    \label{fig:enter-label}
+\end{figure}
+
+It is observed that the SRResNet architecture performs better than the bicubic interpolation by a reasonable margin.
+
+\begin{table}
+    \begin{center}
+    \begin{tabular}{|| c | c ||}
+        \hline
+        Architecture & Accuracy \\
+        \hline\hline
+        SRResNet &  56\% \\
+        \hline
+        Bicubic Interpolation & 45\% \\
+        \hline
+    \end{tabular}
+    
+    \caption{Accuracy for each architecture}
+    \label{tab:my_label}
+    \end{center}
+\end{table}
 
 %%%%%%%%% REFERENCES
 {\small
