make minor changes

--- a/Preliminary-Project-Report/group8-ppr.tex
+++ b/Preliminary-Project-Report/group8-ppr.tex
@@ -246,7 +246,7 @@ Training on this setting has been done without any hyper-parameter tuning. A con
         \hline
     \end{tabular}
     
-    \caption{Accuracy (in \%) for each architecture}
+    \caption{Comparision of accuracies (in \%) }
     \label{tab:my_label}
     \end{center}
 \end{table}
