Add inference notebook

--- a/Code/generateSR-MedMNIST.ipynb
+++ b/Code/generateSR-MedMNIST.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "srmodel = torch.load('model/model_srresnet.pth')[\"model\"]\n",
-    "srmodel = srmodel.cuda()"
+    "# srmodel = srmodel.cuda()"
    ]
   },
   {
@@ -69,6 +69,7 @@
    "outputs": [],
    "source": [
     "def generate_sr_dataset(dataset, model):\n",
+    "    model.cuda()\n",
     "    sr_images, sr_targets = [], []    \n",
     "    dataloader = DataLoader(dataset, batch_size=512, shuffle=False, num_workers=4)\n",
     "    for (inputs, targets) in tqdm(dataloader):\n",
@@ -76,9 +77,10 @@
     "            inputs = inputs.cuda()\n",
     "            inputs = Variable(inputs).float()\n",
     "            sr_inputs = model(inputs)\n",
+    "            inputs.cpu()\n",
     "            sr_images.append(sr_inputs.cpu().numpy().astype(np.float32))\n",
     "            sr_targets.append(targets.numpy().astype(np.int64))\n",
-    "\n",
+    "    model.cpu()\n",
     "    sr_images = np.concatenate(sr_images, axis=0).clip(0, 1)\n",
     "    sr_targets = np.concatenate(sr_targets, axis=0)\n",
     "\n",
